# homework

./: .gitignore  .gitmodules  Allat.cs  Animals.csproj  Animals.sln  Hal.cs  Kigyo.cs  Kutya.cs  Madar.cs  Mocker.cs  Program.cs  README.md  clock.js  draw.css  draw.html  draw.js  excel.css  excel.html  excel.js  maze.html  numgame.css  numgame.html  numgame.js  pom.xml  pom_fizzbuzz.xml  raktarkeszlet.sln
Data/: Data.csproj  Location.cs  Product.cs  User.cs
Data/Properties/: AssemblyInfo.cs
EladoKliens/: App.config  EladoKliens.csproj  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  User.cs
EladoKliens/Properties/: Resources.Designer.cs  Resources.hu-HU.resx
Ergonomikus_web/Draw/: draw.css  draw.html  draw.js
Mandelbrot_OpenMP/: Mandelbrot_OpenMP.vcxproj  main.c
RaktarSzerver/: DBConnection.cs  Program.cs  RaktarSzerver.csproj
RaktarSzerver/Properties/: AssemblyInfo.cs
RaktarSzerver/SQLTasks/: Authentication.cs  ProductGetAmount.cs  ProductTasks.cs
RaktarosKliens/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  RaktarosKliens.csproj
RestService/: IRestService.cs  RestService.csproj  RestService.svc.cs  Web.config
RestService/DBConnection/: IConnection.cs  MSSQLConnection.cs  SQLiteConn.cs
RestService/DBTasks/: IDatabase.cs  MSSQLDatabase.cs  SQLiteDatabase.cs
RestService/Database/: raktar.sqlite
RestService/Model/: DeleteProductRequest.cs  Location.cs  LoginRequest.cs  Product.cs  User.cs
RestService/Properties/: AssemblyInfo.cs
WcfService/: DALConnection.cs  IProductServices.cs  ProductServices.cs  WcfService.csproj
WcfService/Properties/: AssemblyInfo.cs
adatbázisfájl/: RaktarKeszlet.bak
imgproc/HF1/: .gitignore  feladat1.py  feladat2.py  pattern_o.tif
imgproc/HF2/: teach.py  test.py
imgproc/HF3/: dog_feladat.py
imgproc/HF4/: anim1.tif  anim2.tif  mozaikolas_feladat.py
numgame/: App.xaml.cs  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  numgame.csproj
numgame/Properties/: Settings.Designer.cs
parallel/cuda/: .editorconfig  .gitignore  CMakeLists.txt  matrix.txt  matrix2.txt  matrix_avg.c  matrix_avg.cu  measure_time.ps1  measure_time.sh  randomgen.c  test.ps1  test.sh
parallel/mpi/: .gitignore  Makefile  factorial.cpp
parallel/omp/: Mandelbrot_OpenMP.sln
parallel/omp/Mandelbrot_OpenMP/: Mandelbrot_OpenMP.vcxproj  main.c
roscar/: .gitignore  README.md
roscar/src/roscar_control/: CMakeLists.txt  package.xml
roscar/src/roscar_control/src/: car_teleop_key.cpp
roscar/src/roscar_description/: CMakeLists.txt  package.xml
roscar/src/roscar_description/urdf/: roscar.gazebo  roscar.xacro
roscar/src/roscar_gazebo/: CMakeLists.txt  package.xml
roscar/src/roscar_gazebo/launch/: roscar_world.launch
roscar/src/roscar_gazebo/worlds/: roscar.world
superdoom2d/: README.md  pom.xml
wcskatedra/: .gitignore  README.md
wcskatedra/practice/: pom.xml
xslevelup/oop-csharp/animals/: Allat.cs  Animals.sln  Hal.cs  Kigyo.cs  Kutya.cs
xslevelup/oop-csharp/animals/Properties/: AssemblyInfo.cs
xslevelup/oop-csharp/numgame.NET/: numgame.NET.sln
xslevelup/oop-csharp/numgame.NET/numgame/: App.xaml  CommandBase.cs  GuessResponse.cs  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  RegistrationResponse.cs  numgame.csproj
xslevelup/oop-csharp/numgame.NET/numgame/Properties/: AssemblyInfo.cs  (+1 more)
xslevelup/oop-csharp/raktarkeszlet/: .gitignore  raktarkeszlet.sln
xslevelup/oop-csharp/raktarkeszlet/EladoKliens/: App.xaml  App.xaml.cs  EladoKliens.csproj  MainWindow.xaml  MainWindow.xaml.cs  VisibilityConverter.cs
xslevelup/oop-csharp/raktarkeszlet/RaktarosKliens/: App.xaml  MainWindow.xaml  MainWindow.xaml.cs  RaktarosKliens.csproj  User.cs
xslevelup/oop-csharp/raktarkeszlet/RestService/: IRestService.cs  RestService.csproj  Token.cs
xslevelup/web/clock/: clock.html  clock.js
xslevelup/web/excel/: excel.css  excel.html  excel.js
xslevelup/web/jquery-draw/: draw.css
xslevelup/web/maze/: gulpfile.js  maze.js  maze.less  package.json
xslevelup/web/numgame/: numgame.css  numgame.html  numgame.js
(+58 files in other folders)
