cmake_minimum_required(VERSION 2.8)
project(hf1)

include(CTest)

add_executable(hf1 matrix_avg.c)

add_test(NincsArgumentum hf1)
set_tests_properties(NincsArgumentum PROPERTIES WILL_FAIL true)
IF(WIN32)
  add_test(OutputEllenorzes powershell ./test.ps1 5 matrix.txt)
  set_tests_properties(OutputEllenorzes PROPERTIES PASS_REGULAR_EXPRESSION "0 2")
  add_test(OutputEllenorzes2 powershell ./test.ps1 5 matrix2.txt)
  set_tests_properties(OutputEllenorzes2 PROPERTIES PASS_REGULAR_EXPRESSION "")
ELSE()
  add_test(OutputEllenorzes ./test.sh 5 matrix.txt)
  set_tests_properties(OutputEllenorzes PROPERTIES PASS_REGULAR_EXPRESSION "0 2")
  add_test(OutputEllenorzes2 ./test.sh 5 matrix2.txt)
  set_tests_properties(OutputEllenorzes2 PROPERTIES PASS_REGULAR_EXPRESSION "")
ENDIF()
