<?xml version="1.0"?>
<package format="2">
  <name>roscar_gazebo</name>
  <version>0.0.0</version>
  <description>The roscar_gazebo package</description>
  <maintainer email="wolfmanfp@todo.todo">wolfmanfp</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
